--- a/test.html
+++ b/test.html
@@ -17,6 +17,7 @@
 			<a href="index.html" class="nav_links">Signup</a>
 			<a href="index.html" id="host_link">Become a Host</a>
 		</div>
+
 		<div id="welcome_text_div">
 			<p id="welcome_text">Welcome Home</p>
 			<p id="welcome_text_sub">We Rent unique places For You</p>
@@ -71,9 +72,16 @@
 		</div>
 	</div>
 	<div id="mid">
-		<div>
-			<p id="mid_heading">We may be apart, but we'll get<br> through this together.</p>
+		<div class="banner">
+			<video autoplay loop>
+				<source src="bg.mp4" type="video/mp4">
+			</video>
+			<p>We may be apart, but we'll get<br> through this together.</p>
 		</div>
+		
+		<!-- <div>
+			<p id="mid_heading">We may be apart, but we'll get<br> through this together.</p>
+		</div> -->
 		<div id="part1">
 			<img src="bg.jfif" id="part_image"/>
 			<p id="mid_text">Online Experiences</p>
