--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 		</div>
 	</div>
 	<div id="lower_mid">
-		<p id="lower_mid_heading">Introducing Online Experiences</p>
+		<div id="lower_mid_heading">Introducing Online Experiences</div>
+		<a href="a" id="host_link1">Explore all</a>
 		<p id="lower_mid_sub">Now you can meet people all over the world while trying <br>something new. Join live, interactive video sessions led by <br>expert hosts—all without leaving home.</p>
-		<a href="a" id="host_link">Explore all</a>
 		<div id="lower_part1">
 			<a href="index.html">
 				<img src="lower0.jpg" id="part_image"/>
