--- a/index.html
+++ b/index.html
@@ -145,19 +145,24 @@
 	</div>
 	<div id="footer">
 		<p><hr id="footer_length"></p>
-		<p id="footer_text">© 2020 TRAVEL, Inc. All rights reserved  &nbsp ·Privacy &nbsp ·Terms &nbsp  ·Sitemap &nbsp ·UK Modern Slavery Act &nbsp ·Company details</p>
+		<div id="footer_text_div">
+			<p id="footer_text">© 2020 TRAVEL, Inc. All rights reserved  &nbsp ·Privacy &nbsp ·Terms &nbsp  ·Sitemap &nbsp ·UK Modern Slavery Act &nbsp ·Company details</p>
+		</div>
 		
-		<a href="https://www.instagram.com/garvit_chittora_07/">
+		<div id="footer_img_div">
+			<a href="https://www.instagram.com/garvit_chittora_07/">
 			<img src="instafi.png" id="footer_insta_image"/>
-		</a>
-		<a href="https://twitter.com/ChittoraGarvit" class="link">
-			<i class="fa fa-twitter" aria-hidden="true"id="footer_twitter_image" ></i>
-		</a>
-		<a href="https://www.facebook.com/garvit.chittora.90" class="link">
-			<i class="fa fa-facebook" aria-hidden="true" id="footer_fb_image"></i>
-		</a>
-		<img src="web.png" id="world1"/>
-		<a href="index.html" id="footer_link">English<br><br></a>
+			</a>
+			<a href="https://twitter.com/ChittoraGarvit" class="link">
+				<i class="fa fa-twitter" aria-hidden="true"id="footer_twitter_image" ></i>
+			</a>
+			<a href="https://www.facebook.com/garvit.chittora.90" class="link">
+				<i class="fa fa-facebook" aria-hidden="true" id="footer_fb_image"></i>
+			</a>
+			<img src="web.png" id="world1"/>
+			<a href="index.html" id="footer_link">English<br><br></a>
+		</div>
+		
 	</div>
 </body>
 </html>
