--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link rel="shortcut icon" href="logo2.png" type="image/png" />
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmqmbPxHorvUxdXkVpAumH6XQq9WuBW1M&libraries=places"></script>
+	<style>
+		::placeholder{
+			font-size: 90%;
+			padding-left: 5%; 
+		}
+	</style>
 </head>
 <body>
 	<div id="header">
@@ -27,13 +33,13 @@
 		</div>
 		<div id="searchbar">
 
-			<input id="where_div" class ="searchbar_text" placeholder="   		Where you want to go ?">
+			<input id="where_div" placeholder="   	Where you want to go ?">
 			
-			<input id="check_div" class ="searchbar_text" placeholder="     Check In Date ">
+			<input id="check_div" placeholder="Check In Date ">
 			
-			<input id="check_out_div" class ="searchbar_text" placeholder="    	Check Out Date">
+			<input id="check_out_div" placeholder="Check Out Date">
 			
-			<input class="searchbar_text" id ="guest_div" placeholder="   	Guest No   ▼">
+			<input class="searchbar_text" id ="guest_div" placeholder="  Guest No  ▼">
 		   	<a href="index.html">
 			   	<div id="search_div">
 					<p id="search_text">Search</p>
