--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 		   	<a href="index.html">
 			   	<div id="search_div">
 					<p id="search_text">Search</p>
+					<i class="fa fa-search" style="color: white; margin-top: 11%;float: left;display: inline; margin-left: 10%;" aria-hidden="true"></i>
 			    </div>
 			</a>
 				
